--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <title>Twitch Live Stream Search</title>
-    <base href="/twitch/src/">
+    <base href="/src/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
